pierre/css/bezierjs-10-bspline.css
.row {
	float: right;
}

html {
  font-family: Helvetica, Arial, sans-serif;
  font-size: 90%;
  background: #171717;
  margin: 0;
  padding: 0;
}

body {
    margin: 0;
    padding: 0;
    color: #ffffff;

}

.center{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.center_more{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#canvas_target {
    z-index: 1;
    background-color: transparent;
}

#canvas_anim_composite {
    z-index: -1;
}

#canvas_composite {
    z-index: -2;
}

#canvas_background {
    z-index: -3;
}

#canvas_flat {
    z-index: -4;
    visibility: hidden;
}

.controls {
    margin: 20px 0 4px 20px;
    max-width: 250px;
    z-index: 2;
}

.controls_flex {
    display: flex;
    justify-content: flex-end;
    margin-right: 20px;
    margin-bottom: 10px;
}

.controls_flex_2 {
    display: flex;
    justify-content: flex-start;
    margin-left: 20px;
    margin-bottom: 10px;
}

.controls_flex_col {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 10px;
}

.controls_flex_in_col {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 9px;
}

#last_main_ui {
    margin-bottom: 10px;
    margin-right: 0;
}

.arrows_container {
    display: flex;
    flex-direction: column;
/*    justify-content: center;*/
    padding-top: 13px;
}

.arrow_down {
    margin-top: 8px;
}

.arrow {
    fill: #868686;
}

.arrow:hover {
    fill: white;
}

.arrow:active {
    fill: #5cadc1;
}

.svg-icon {
    fill: red;
    transform: rotate(180deg);
}

.svg-icon:hover {
    fill: green;
}

.svg-icon:active {
    fill: grey;
}


.col-1 input {
    margin-right: 0;
}

.col-1 {
    width: 50%;
}

.col-1-bottom {
    width: 76%;
}

.col-2 {
    padding-right: 20px;
    width: 61%;
}

.nest-container {
    display: flex;
}

.col-nest-1 {
    justify-content: flex-end;
    margin-left: 14px;
    margin-top: 5px;
    border-right: 2px #3e3e3e solid;
    padding-right: 24px;
}

.col-nest-2 {
    flex: 2;
    justify-content: flex-end;
    margin-top: 10px;
    margin-right: 24px;
}

button, label, input,.radio_text, .display_areas *, .readout, .basic_ui_text {
    box-sizing: border-box;
    padding: 0.4rem;
/*    display: inline-block;*/
    font-size: 1.0rem;
    opacity: 0.7;
    background: rgba(0,0,0,0);
    color: white;
    font-weight: bold;
    letter-spacing: 1px;
}

button {
    color: gray;
}

.display_areas {
    margin-top: 0;    
}

.display_areas p {
    padding-left: 0;
    padding-bottom: 0;
    margin-bottom: 0;
}

input[type='checkbox']{
    opacity: 1;
    width: 20px;
    height: 20px;
    margin-top: 5.5px;
    margin-bottom: 0;
}

#transparency_display, #diameter_display {
    min-width: 29%;
    text-align: right;
    font-size: x-large;
    font-weight: normal;
    margin-left: 18px;
}

button {
  margin-top: 16px;
    border-radius: 3px;
    border: 2px solid;
    transition: 0.5s;
	letter-spacing: 1px;
}

#color_1,#color_2,#color_3,#color_4,#background_color,input,select, .display_areas * {
    padding-left: 8px;
    margin-left: 2px;
    font-size: 0.9em;
}

label {
	letter-spacing: 1px;
    margin-top: 2px;
	margin-right: 0;
    margin-bottom: 0;
    margin-left: 20px;
    padding-bottom: 4px;
    padding-left: 0;
    text-align: right;
}

.ui_text {
    margin-bottom: 0;
}

/*
.ui_text > p {
    margin-right: 5px;
    margin-bottom: 4px;
    letter-spacing: 1px;
}
*/

/*
.ui_text > p:first-child {
    margin-right: 0;
    padding-right: 0;
}

*/
.readout {
    display: inline-block;
    min-width: 57px;
    text-align: center;
    font-size: 1.6rem;
    font-weight: normal;
    padding: 0;
    margin: 8px 11px 12px 27px;
}

.readout_full_width {
    display: inline-block;
    min-width: 27px;
    text-align: left;
    font-size: 1.6rem;
    font-weight: normal;
    padding: 0;
    margin: 2px 14px 0px 11px;
}

.lbl_in_flex_start {
    text-align: left;
    margin-left: 0;
    margin-right: 16px;
    padding-top: 5px;
    color: #b9b9b9;
    transition: 0.8s;
}

.lbl_in_flex_start:hover {
    color: white;
    opacity: 0.9;
}

.ui-row {
    margin-bottom: 10px;
}

button:hover {
  opacity: 0.75;
background: rgb(0,0,0);
    color: white;
  cursor: pointer;
}

button:active {
  opacity: 1;
  box-shadow: 0 -3px 10px rgba(0, 0, 0, 0.1) inset;
}

.fadeaway {
    opacity: 0;
}

.active {
  opacity: 0.75;
background: rgba(242, 65, 65, 0.92);
    color: white;
  cursor: pointer;
}

.instructions {
  font-size: 0.9em;
  line-height: 1.4em;
  color: #717171;
  text-align: left;
  margin-top: 10px;
}

#color_1,#color_2,#color_3,#color_4,#background_color {
    margin: 0;
    padding: 0;
    transition: 0s;
    width: 79px;
    height: 27px;
    opacity: 1;
    border-color: rgba(255, 255, 255, 0.7);
    font-size: 0.8em;
    text-align: center;
    transition: 0s;
}

#redoBtn,#saveBtn {
    margin-left: 16px;
}

.instructions_container {
    border-top: 1px solid gray;
    max-width: 170px;
    margin-top: 40px;
}

.menubars {
    width: 30px;
    height: 4px;
    background-color: #a8a8a8;
    margin: 5px 0;
}

.menubars_on_light_background {
    background-color: #1a1a1a !important;
}
#menuicon {
    position: absolute;
    z-index: 98;
    margin-top: 18px;
    margin-left: 18px;
    background-color: rgba(0, 0, 0, 0.8);
    padding: 5px 7px;
}

.menuicon_on_light_background {
    background-color: rgba(0, 0, 0, 0.2) !important;
}

.displaynone {
    display: none;
}
/* ... */

